--- a/services/service-details.html
+++ b/services/service-details.html
@@ -59,7 +59,7 @@
     <section class="service-details-area service-section-padding">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8">
+                <div class="col-lg-8 col-12">
                     <div class="service-details-wrap">
                         <div class="service-details-top">
                             <div class="service-details-title">
@@ -258,8 +258,8 @@
                                         </ul>
                                         <p class="features-service-category"><a href="#">Medical</a></p>
                                         <h6 class="service-title"><a href="#">A Place Where We care Life</a></h6>
-                                        <ul class="pt-2">
-                                            <li class=" d-flex align-items-center">
+                                        <ul class="pt-2 service-ranking-start">
+                                            <li class=" d-flex">
                                                 <div class="star-rating me-2">
                                                     <div class="back-stars">
                                                         <i class="fa fa-star-o"></i>
@@ -284,10 +284,10 @@
                                         </p>
                                         <ul class="featured-option">
                                             <li class="direction">Leeds Uk, <a href="#">(Direction)</a></li>
-                                            <li><i class="fa fa-ellipsis-h" aria-hidden="true"></i></li>
+                                            <li><i class="fa fa-ellipsis-v" aria-hidden="true"></i></li>
                                         </ul>
                                     </div>
-                                </div>               
+                                </div>                
                                 <div class="single-featurs-service">
                                     <div class="featurs-service-img">
                                         <a href="#"><img src="../assets/images/community/myProfile/photos-3.jpg" alt="image"></a>
@@ -306,8 +306,8 @@
                                         </ul>
                                         <p class="features-service-category"><a href="#">Medical</a></p>
                                         <h6 class="service-title"><a href="#">A Place Where We care Life</a></h6>
-                                        <ul class="pt-2">
-                                            <li class=" d-flex align-items-center">
+                                        <ul class="pt-2 service-ranking-start">
+                                            <li class=" d-flex">
                                                 <div class="star-rating me-2">
                                                     <div class="back-stars">
                                                         <i class="fa fa-star-o"></i>
@@ -332,10 +332,10 @@
                                         </p>
                                         <ul class="featured-option">
                                             <li class="direction">Leeds Uk, <a href="#">(Direction)</a></li>
-                                            <li><i class="fa fa-ellipsis-h" aria-hidden="true"></i></li>
+                                            <li><i class="fa fa-ellipsis-v" aria-hidden="true"></i></li>
                                         </ul>
                                     </div>
-                                </div>               
+                                </div>                
                                 <div class="single-featurs-service">
                                     <div class="featurs-service-img">
                                         <a href="#"><img src="../assets/images/community/myProfile/photos-3.jpg" alt="image"></a>
@@ -354,8 +354,8 @@
                                         </ul>
                                         <p class="features-service-category"><a href="#">Medical</a></p>
                                         <h6 class="service-title"><a href="#">A Place Where We care Life</a></h6>
-                                        <ul class="pt-2">
-                                            <li class=" d-flex align-items-center">
+                                        <ul class="pt-2 service-ranking-start">
+                                            <li class=" d-flex">
                                                 <div class="star-rating me-2">
                                                     <div class="back-stars">
                                                         <i class="fa fa-star-o"></i>
@@ -380,15 +380,15 @@
                                         </p>
                                         <ul class="featured-option">
                                             <li class="direction">Leeds Uk, <a href="#">(Direction)</a></li>
-                                            <li><i class="fa fa-ellipsis-h" aria-hidden="true"></i></li>
+                                            <li><i class="fa fa-ellipsis-v" aria-hidden="true"></i></li>
                                         </ul>
                                     </div>
-                                </div>
+                                </div>  
                             </div>                                                      
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-12">
                     <ul class="service-single-info service-price">
                         <li>
                             <div class="info-figure">
