--- a/services/service-list.html
+++ b/services/service-list.html
@@ -60,7 +60,7 @@
                 </form>
             </div>
             <div class="row">
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6 col-12">
                     <div class="single-featurs-service">
                         <div class="featurs-service-img">
                             <a href="#"><img src="../assets/images/community/myProfile/photos-3.jpg" alt="image"></a>
@@ -79,8 +79,8 @@
                             </ul>
                             <p class="features-service-category"><a href="#">Medical</a></p>
                             <h6 class="service-title"><a href="#">A Place Where We care Life</a></h6>
-                            <ul class="pt-2">
-                                <li class=" d-flex align-items-center">
+                            <ul class="pt-2 service-ranking-start">
+                                <li class=" d-flex">
                                     <div class="star-rating me-2">
                                         <div class="back-stars">
                                             <i class="fa fa-star-o"></i>
@@ -110,7 +110,7 @@
                         </div>
                     </div> 
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6 col-12">
                     <div class="single-featurs-service">
                         <div class="featurs-service-img">
                             <a href="#"><img src="../assets/images/community/myProfile/photos-3.jpg" alt="image"></a>
@@ -129,8 +129,8 @@
                             </ul>
                             <p class="features-service-category"><a href="#">Medical</a></p>
                             <h6 class="service-title"><a href="#">A Place Where We care Life</a></h6>
-                            <ul class="pt-2">
-                                <li class=" d-flex align-items-center">
+                            <ul class="pt-2 service-ranking-start">
+                                <li class=" d-flex">
                                     <div class="star-rating me-2">
                                         <div class="back-stars">
                                             <i class="fa fa-star-o"></i>
@@ -160,7 +160,7 @@
                         </div>
                     </div> 
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6 col-12">
                     <div class="single-featurs-service">
                         <div class="featurs-service-img">
                             <a href="#"><img src="../assets/images/community/myProfile/photos-3.jpg" alt="image"></a>
@@ -179,8 +179,8 @@
                             </ul>
                             <p class="features-service-category"><a href="#">Medical</a></p>
                             <h6 class="service-title"><a href="#">A Place Where We care Life</a></h6>
-                            <ul class="pt-2">
-                                <li class=" d-flex align-items-center">
+                            <ul class="pt-2 service-ranking-start">
+                                <li class=" d-flex">
                                     <div class="star-rating me-2">
                                         <div class="back-stars">
                                             <i class="fa fa-star-o"></i>
@@ -210,7 +210,7 @@
                         </div>
                     </div> 
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6 col-12">
                     <div class="single-featurs-service">
                         <div class="featurs-service-img">
                             <a href="#"><img src="../assets/images/community/myProfile/photos-3.jpg" alt="image"></a>
@@ -229,8 +229,8 @@
                             </ul>
                             <p class="features-service-category"><a href="#">Medical</a></p>
                             <h6 class="service-title"><a href="#">A Place Where We care Life</a></h6>
-                            <ul class="pt-2">
-                                <li class=" d-flex align-items-center">
+                            <ul class="pt-2 service-ranking-start">
+                                <li class=" d-flex">
                                     <div class="star-rating me-2">
                                         <div class="back-stars">
                                             <i class="fa fa-star-o"></i>
@@ -260,7 +260,7 @@
                         </div>
                     </div> 
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6 col-12">
                     <div class="single-featurs-service">
                         <div class="featurs-service-img">
                             <a href="#"><img src="../assets/images/community/myProfile/photos-3.jpg" alt="image"></a>
@@ -279,58 +279,8 @@
                             </ul>
                             <p class="features-service-category"><a href="#">Medical</a></p>
                             <h6 class="service-title"><a href="#">A Place Where We care Life</a></h6>
-                            <ul class="pt-2">
-                                <li class=" d-flex align-items-center">
-                                    <div class="star-rating me-2">
-                                        <div class="back-stars">
-                                            <i class="fa fa-star-o"></i>
-                                            <i class="fa fa-star-o"></i>
-                                            <i class="fa fa-star-o"></i>
-                                            <i class="fa fa-star-o"></i>
-                                            <i class="fa fa-star-o"></i>
-                                            <div class="front-stars" style="width: 75%">
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <p class="f-13">(1000 Feedback)</p>
-                                </li>
-                            </ul>
-                            <p class="featured-service-provider">
-                                By: <a href="#">Life Care Clinic and Hospital</a>
-                            </p>
-                            <ul class="featured-option">
-                                <li class="direction">Leeds Uk, <a href="#">(Direction)</a></li>
-                                <li><i class="fa fa-ellipsis-v" aria-hidden="true"></i></li>
-                            </ul>
-                        </div>
-                    </div> 
-                </div>
-                <div class="col-lg-3">
-                    <div class="single-featurs-service">
-                        <div class="featurs-service-img">
-                            <a href="#"><img src="../assets/images/community/myProfile/photos-3.jpg" alt="image"></a>
-                            <div class="provider-img">
-                                <a href="#"><img src="../assets/images/community/myProfile/photos-1.jpg" alt="image"></a>
-                            </div>
-                            <div class="service-like">
-                                <a href="javascript:void(0)" tabindex="0"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-                            </div>
-                        </div>
-                        <div class="features-service-info">
-                            <ul class="features-verified">
-                                <li class="featured-color">Featured</li>
-                                <li class="verified-color">Verified</li>
-                                <li class="service-price">$29.00</li>
-                            </ul>
-                            <p class="features-service-category"><a href="#">Medical</a></p>
-                            <h6 class="service-title"><a href="#">A Place Where We care Life</a></h6>
-                            <ul class="pt-2">
-                                <li class=" d-flex align-items-center">
+                            <ul class="pt-2 service-ranking-start">
+                                <li class=" d-flex">
                                     <div class="star-rating me-2">
                                         <div class="back-stars">
                                             <i class="fa fa-star-o"></i>
