some update on gallery page

--- a/gallery/header.html
+++ b/gallery/header.html
@@ -23,12 +23,12 @@
                 <div class="logo">
                     <a href="index.html"><img src="/assets/images/logo.png" alt=""></a>
                 </div>
-                <div class="gallery-header-search-input">
+                <!-- <div class="gallery-header-search-input">
                     <input type="text" placeholder="Search">
                     <div class="gallery-header-search-icon">
                         <i class="fa fa-search" aria-hidden="true"></i>
                     </div>
-                </div>
+                </div> -->
                 <ul class="gallery-menu-list">
                     <li>
                         <a href="#" class="">HOME</a>
@@ -42,11 +42,11 @@
                 </ul>
                 <ul class="gallery-login-register">
                     <li>
-                        <a href="#" class="common-button f-14">Login</a>
+                        <a href="../community/login.html" class="common-button">Add Post</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="#" class="common-button f-14">Sign up</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
