--- a/gallery/photo-page.html
+++ b/gallery/photo-page.html
@@ -34,6 +34,8 @@
                             </h5>
                         </div>
                     </div>
+                </a>
+                <a href="./profile.html">
                     <div class="publisher-details">
                         <div class="publisher-img-content">
                             <img class="publisher-img" src="../assets/images/gallery/header/inp-fashion.jpg"
@@ -404,9 +406,12 @@
                     <div class="ch-masonry__item">
                         <div class="photo-blog-card card-box-shadow">
                             <div class="photo-blog-card-top">
-                                <h5 class="f-16">
-                                    Golden Retriever Behind The France & Winter is here again. So the sun is
-                                </h5>
+                                <a href="javascript:void(0)" class="" data-bs-toggle="modal"
+                                    data-bs-target="#exampleModal">
+                                    <h5 class="f-16">
+                                        Golden Retriever Behind The France & Winter is here again. So the sun is
+                                    </h5>
+                                </a>
                                 <ul class="photo-blog-card-date">
                                     <li class="">
                                         <div>
@@ -433,12 +438,15 @@
                                 </div>
                             </div>
                             <div class="">
-                                <a href="#">
+                                <a href="javascript:void(0)" class="" data-bs-toggle="modal"
+                                    data-bs-target="#exampleModal">
                                     <div class="photo-card-img-part">
                                         <img class="photo-card-img"
                                             src="../assets/images/gallery/photo-page/photo-card-1.jpg"
                                             alt="family photo">
                                     </div>
+                                </a>
+                                <a href="./profile.html">
                                     <div class="publisher-details">
                                         <div class="publisher-img-content">
                                             <img class="publisher-img"
@@ -471,13 +479,14 @@
                                 <div class="modal-content">
                                     <div class="modal-header border-bottom-0 pb-4">
                                         <a href="#" class="wishlist-modal-cross-btn" data-bs-dismiss="modal"
-                                          aria-label="Close">&times;</a>
+                                            aria-label="Close">&times;</a>
                                     </div>
                                     <div class="modal-body">
                                         <div class="photo-blog-card">
                                             <div class="photo-blog-card-top">
                                                 <h5 class="f-16">
-                                                    Golden Retriever Behind The France & Winter is here again. So the sun is
+                                                    Golden Retriever Behind The France & Winter is here again. So the
+                                                    sun is
                                                 </h5>
                                                 <ul class="photo-blog-card-date">
                                                     <li class="">
@@ -492,7 +501,8 @@
                                                     </li>
                                                 </ul>
                                                 <p class="photo-blog-card-description">
-                                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est assumenda molestias
+                                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
+                                                    assumenda molestias
                                                     unde
                                                     distinctio quae repellat?
                                                 </p>
@@ -1348,6 +1358,8 @@
                                     <i class="fa fa-trophy color-white"></i>
                                 </div>
                             </div>
+                        </a>
+                        <a href="./profile.html">
                             <div class="publisher-details">
                                 <div class="publisher-img-content">
                                     <img class="publisher-img" src="../assets/images/gallery/header/inp-fashion.jpg"
