--- a/services/provider-profile.html
+++ b/services/provider-profile.html
@@ -382,7 +382,7 @@
                                     <h5 class="content-title">Contact Information</h5>
                                     <div class="map-schedule">
                                         <div class="service-contact-map">
-                                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3677.563611840607!2d89.550943574086!3d22.818628423910422!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39ff90068bb863df%3A0xa509cd81d0ea8053!2sDr.%20Rahim%20Plaza!5e0!3m2!1sen!2sbd!4v1681802815684!5m2!1sen!2sbd" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                            <div id="serviceMap"></div>
                                         </div>
                                         <div class="service-schedule">
                                             <div class="service-time">
@@ -451,6 +451,30 @@
                                         </a>
                                     </div>
                                 </div>
+                                <div class="single-video">
+                                    <div class="video-tumbnil">                                                
+                                        <img src="../assets/images/services/video/hqdefault2.jpg" alt="image">
+                                        <a href="#" class="play-icon" data-video-id="8qU2xhZlsJE">
+                                            <i class="fa fa-play" aria-hidden="true"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="single-video">
+                                    <div class="video-tumbnil">                                                
+                                        <img src="../assets/images/services/video/hqdefault3.jpg" alt="image">
+                                        <a href="#" class="play-icon" data-video-id="mxD7QEt85ms">
+                                            <i class="fa fa-play" aria-hidden="true"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="single-video">
+                                    <div class="video-tumbnil">                                                
+                                        <img src="../assets/images/services/video/hqdefault3.jpg" alt="image">
+                                        <a href="#" class="play-icon" data-video-id="mxD7QEt85ms">
+                                            <i class="fa fa-play" aria-hidden="true"></i>
+                                        </a>
+                                    </div>
+                                </div>
                             </div>                                    
                         </div>
                     </div>
@@ -459,7 +483,7 @@
                             <div class="col-lg-10">
                                 <h5 class="content-title">Service</h5>
                                 <div class="row">
-                                    <div class="col-lg-4">
+                                    <div class="col-lg-4 col-md-6 col-12">
                                         <div class="single-featurs-service">
                                             <div class="featurs-service-img">
                                                 <a href="#"><img src="../assets/images/community/myProfile/photos-3.jpg" alt="image"></a>
@@ -478,8 +502,8 @@
                                                 </ul>
                                                 <p class="features-service-category"><a href="#">Medical</a></p>
                                                 <h6 class="service-title"><a href="#">A Place Where We care Life</a></h6>
-                                                <ul class="pt-2">
-                                                    <li class=" d-flex align-items-center">
+                                                <ul class="pt-2 service-ranking-start">
+                                                    <li class=" d-flex">
                                                         <div class="star-rating me-2">
                                                             <div class="back-stars">
                                                                 <i class="fa fa-star-o"></i>
@@ -504,12 +528,12 @@
                                                 </p>
                                                 <ul class="featured-option">
                                                     <li class="direction">Leeds Uk, <a href="#">(Direction)</a></li>
-                                                    <li><i class="fa fa-ellipsis-h" aria-hidden="true"></i></li>
+                                                    <li><i class="fa fa-ellipsis-v" aria-hidden="true"></i></li>
                                                 </ul>
                                             </div>
                                         </div> 
                                     </div>
-                                    <div class="col-lg-4">
+                                    <div class="col-lg-4 col-md-6 col-12">
                                         <div class="single-featurs-service">
                                             <div class="featurs-service-img">
                                                 <a href="#"><img src="../assets/images/community/myProfile/photos-3.jpg" alt="image"></a>
@@ -528,8 +552,8 @@
                                                 </ul>
                                                 <p class="features-service-category"><a href="#">Medical</a></p>
                                                 <h6 class="service-title"><a href="#">A Place Where We care Life</a></h6>
-                                                <ul class="pt-2">
-                                                    <li class=" d-flex align-items-center">
+                                                <ul class="pt-2 service-ranking-start">
+                                                    <li class=" d-flex">
                                                         <div class="star-rating me-2">
                                                             <div class="back-stars">
                                                                 <i class="fa fa-star-o"></i>
@@ -554,12 +578,12 @@
                                                 </p>
                                                 <ul class="featured-option">
                                                     <li class="direction">Leeds Uk, <a href="#">(Direction)</a></li>
-                                                    <li><i class="fa fa-ellipsis-h" aria-hidden="true"></i></li>
+                                                    <li><i class="fa fa-ellipsis-v" aria-hidden="true"></i></li>
                                                 </ul>
                                             </div>
                                         </div> 
                                     </div>
-                                    <div class="col-lg-4">
+                                    <div class="col-lg-4 col-md-6 col-12">
                                         <div class="single-featurs-service">
                                             <div class="featurs-service-img">
                                                 <a href="#"><img src="../assets/images/community/myProfile/photos-3.jpg" alt="image"></a>
@@ -578,8 +602,8 @@
                                                 </ul>
                                                 <p class="features-service-category"><a href="#">Medical</a></p>
                                                 <h6 class="service-title"><a href="#">A Place Where We care Life</a></h6>
-                                                <ul class="pt-2">
-                                                    <li class=" d-flex align-items-center">
+                                                <ul class="pt-2 service-ranking-start">
+                                                    <li class=" d-flex">
                                                         <div class="star-rating me-2">
                                                             <div class="back-stars">
                                                                 <i class="fa fa-star-o"></i>
@@ -604,12 +628,12 @@
                                                 </p>
                                                 <ul class="featured-option">
                                                     <li class="direction">Leeds Uk, <a href="#">(Direction)</a></li>
-                                                    <li><i class="fa fa-ellipsis-h" aria-hidden="true"></i></li>
+                                                    <li><i class="fa fa-ellipsis-v" aria-hidden="true"></i></li>
                                                 </ul>
                                             </div>
                                         </div> 
                                     </div>
-                                    <div class="col-lg-4">
+                                    <div class="col-lg-4 col-md-6 col-12">
                                         <div class="single-featurs-service">
                                             <div class="featurs-service-img">
                                                 <a href="#"><img src="../assets/images/community/myProfile/photos-3.jpg" alt="image"></a>
@@ -628,8 +652,8 @@
                                                 </ul>
                                                 <p class="features-service-category"><a href="#">Medical</a></p>
                                                 <h6 class="service-title"><a href="#">A Place Where We care Life</a></h6>
-                                                <ul class="pt-2">
-                                                    <li class=" d-flex align-items-center">
+                                                <ul class="pt-2 service-ranking-start">
+                                                    <li class=" d-flex">
                                                         <div class="star-rating me-2">
                                                             <div class="back-stars">
                                                                 <i class="fa fa-star-o"></i>
@@ -654,57 +678,7 @@
                                                 </p>
                                                 <ul class="featured-option">
                                                     <li class="direction">Leeds Uk, <a href="#">(Direction)</a></li>
-                                                    <li><i class="fa fa-ellipsis-h" aria-hidden="true"></i></li>
-                                                </ul>
-                                            </div>
-                                        </div> 
-                                    </div>
-                                    <div class="col-lg-4">
-                                        <div class="single-featurs-service">
-                                            <div class="featurs-service-img">
-                                                <a href="#"><img src="../assets/images/community/myProfile/photos-3.jpg" alt="image"></a>
-                                                <div class="provider-img">
-                                                    <a href="#"><img src="../assets/images/community/myProfile/photos-1.jpg" alt="image"></a>
-                                                </div>
-                                                <div class="service-like">
-                                                    <a href="javascript:void(0)" tabindex="0"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-                                                </div>
-                                            </div>
-                                            <div class="features-service-info">
-                                                <ul class="features-verified">
-                                                    <li class="featured-color">Featured</li>
-                                                    <li class="verified-color">Verified</li>
-                                                    <li class="service-price">$29.00</li>
-                                                </ul>
-                                                <p class="features-service-category"><a href="#">Medical</a></p>
-                                                <h6 class="service-title"><a href="#">A Place Where We care Life</a></h6>
-                                                <ul class="pt-2">
-                                                    <li class=" d-flex align-items-center">
-                                                        <div class="star-rating me-2">
-                                                            <div class="back-stars">
-                                                                <i class="fa fa-star-o"></i>
-                                                                <i class="fa fa-star-o"></i>
-                                                                <i class="fa fa-star-o"></i>
-                                                                <i class="fa fa-star-o"></i>
-                                                                <i class="fa fa-star-o"></i>
-                                                                <div class="front-stars" style="width: 75%">
-                                                                    <i class="fa fa-star"></i>
-                                                                    <i class="fa fa-star"></i>
-                                                                    <i class="fa fa-star"></i>
-                                                                    <i class="fa fa-star"></i>
-                                                                    <i class="fa fa-star"></i>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                        <p class="f-13">(1000 Feedback)</p>
-                                                    </li>
-                                                </ul>
-                                                <p class="featured-service-provider">
-                                                    By: <a href="#">Life Care Clinic and Hospital</a>
-                                                </p>
-                                                <ul class="featured-option">
-                                                    <li class="direction">Leeds Uk, <a href="#">(Direction)</a></li>
-                                                    <li><i class="fa fa-ellipsis-h" aria-hidden="true"></i></li>
+                                                    <li><i class="fa fa-ellipsis-v" aria-hidden="true"></i></li>
                                                 </ul>
                                             </div>
                                         </div> 
@@ -723,6 +697,8 @@
     <script src="../assets/js/odometer.js"></script>
     <script src="../assets/js/slick-slider.js"></script>
     <script src="../assets/js/services/jquery-modal-video.min.js"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap" async defer></script> <!--this api just For Development Purpose Only-->
     <script src="../assets/js/services/script.js"></script>
 </body>
 
